# libsha1

./: README.md  TESTS.md  configure.ac  example.c  sha1.h
examples/: README.md  build.sh  example1.c  example2.c
src/: Makefile.am  sha1.c  sha1.h
